--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<div class="footer pt-5">
+    <div class="footer-links container">
+        <div class="footer-links_logo mb-3" >
+            <!-- <img src="assets/logo.png" alt=""> -->
+             <h2>Madera</h2>
+            
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-about">
+                <h4>About us</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nisi eaque quis quisquam dolorum est neque facilis, autem mollitia sequi reiciendis reprehenderit praesentium iusto unde sunt veniam sint magni in perferendis provident? Maxime, minus omnis?</p>
+            </div>
+            <div class="footer-links_div">
+                <h4>Useful</h4>
+                <p>Wood</p>
+                <p>Wood</p>
+                <p>Wood</p>
+                <p>Wood</p>
+                <p>Wood</p>
+            </div>
+    
+            <div class="footer-links_div">
+                <h4>Download</h4>
+                <p>FAQ</p>
+                <p>Order Status</p>
+                <p>Shipping</p>
+                <p>Return Policy</p>
+                
+            </div>
+            <div class="footer-links_div">
+                <h4>Call center</h4>
+                <p>Privacy</p>
+                <p>Our Blog</p>
+                <p>Terms and Conditions</p>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-copyright">
+        <p>&COPY; 2024 Light work. Omo no rights dey reserved. MIDE</p>
+    </div>
+</div>
