--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/collections">Shop</a>
+          <a class="nav-link" routerLink="/shop">Shop</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/blog">About us</a>
