--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="col-lg-4 mt-5 product" *ngFor="let data of getCollectionData; index as i" data-aos="zoom-in" data-aos-easing="ease-in-out">
-                <a [routerLink]="['/product-detail',data.pdCategory,data.pdId]" class="productLink">
+                <a class="productLink">
                   <div class="product-grid" *ngIf="i<=3">
                     <div>
                       <img src={{data.img}} alt="">
@@ -148,7 +148,7 @@
     </div>
 
 
-    <div id="carouselExampleIndicators" style="height: 50vh; background: #EFEFEF; margin-bottom: 2rem; " class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" style="height: 50vh; background: #EFEFEF; " class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
