--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,10 +15,10 @@
           <a class="nav-link" routerLink="/shop">Shop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/blog">About us</a>
+          <a class="nav-link" routerLink="/about">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact">Blog</a>
+          <a class="nav-link" routerLink="/blog">Blog</a>
         </li>
       </ul>
       <div class="d-flex gap-4  align-items-center">
