--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -6,10 +6,10 @@
     <!-- Body  -->
     <div class="row main-content">
 
-        <div class="hometextcontainer" data-aos="fade-up" data-aos-easing="ease-in-out">
-            
-        </div>
-        <p class="smalltext">Showing 1-9 of 57 results</p>
+        <!-- <div class="hometextcontainer mt-5" style="margin-top: 100px;" data-aos="fade-up" data-aos-easing="ease-in-out">
+            <p class="smalltext ">Showing 1-9 of 57 results</p>
+        </div> -->
+        
         <div class="col-lg-4 mt-5 product " *ngFor="let data of filteredProducts;index as i" data-aos="zoom-in"
             data-aos-easing="ease-in-out">
             
