--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,100 +1,36 @@
-.banner
-{
-    background-image: url('../../assets/ma-home.png');
-    height: 100vh; /* Full viewport height */
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-}
-.content
-{
-    top: 30%;
-    /* bottom: 10%; */
-    left: 5%;
-    position: absolute;
-    color: white;
-}
-.content-bottom{
-    bottom: 10%;
-    left: 70%;
-    position: absolute;
-    color: white;
-}
-.btn-origin{
-    background: #586BA4;
-    color: white;
-}
-.bigtext{
-    font-size: 3rem;
-    width: 50%;
-}
-.hometextcontainer{
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-}
-.smalltext{
-    /* font-size: 3rem; */
-    width: 40%;
-    color: gray;
-    font-size: 14px;
-}
-
-/* .product-grid-container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-} */
-.product-grid{
-    margin-bottom: 1rem;
-}
-.product-grid img{
-    width: 250px;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 1.1rem;
-}
-.product-grid img:hover{
-    opacity: 0.6;
-}
-.productLink {
-    text-decoration: none;
-}
-.menutext{
-    text-decoration: none;
-    font-size: 14px;
-    color: gray;
-    font-weight: 400;
-    padding: 10px 0;
-    
-}
-.pricetext{
-    text-decoration: none;
-    font-size: 14px;
-    color: #000;
-    font-weight: bold;
-    /* padding: 10px;  */
-}
-
 .joltImg img{
     width: 100%;
     height: 400px;
     object-fit: cover;
 }
-
-/* .explore-btn{
+.menutext{
+    text-decoration: none;
+    font-size: 14px;
+    color: #2D2D2D;
+    font-weight: 700;
+    padding: 5px 0;
+    
+}
+.jnr{
     display: flex;
-    justify-content: center;
-    align-items: center;
-} */
+    /* flex-wrap: wrap; */
+    gap: 1rem;
+}
+.jnr img:first-child{
+    width: 70%;
+    height: 300px;
+}
+.jnr img:nth-child(2){
+    width: 70%;
+    height: 300px;
+
+}
 .exp{
     display: inline-block;
-    font-size: 1rem;
-    background: #586BA4;
-    padding: 10px 30px;
+    font-size: 0.7rem;
+    background: #393939;
+    /* border: 1px solid white; */
+    padding: 10px 20px;
     text-decoration: none;
     font-weight: 500;
     margin-top: 10px;
@@ -102,59 +38,14 @@
     letter-spacing: 2px;
     transition: 0.2s;
 }
-.exp:hover{
-    letter-spacing: 6px;
-}
 
 
-
-
-
-
-@media screen and (max-width: 600px) {
-    .content {
-        top: 20%;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-    .content p{
-        /* width: 100%; */
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-    .content button{
-        margin-top: 100px;
-    }
-    .content-bottom{
-        display: none;
-    }
-    .hometextcontainer{
+@media screen and (max-width: 600px){
+    .jnr{
         display: flex;
         flex-direction: column;
-        text-align: start;
-        align-items: start;
-        justify-content: start;
     }
-    .smalltext{
+    .jnr img{
         width: 100%;
-    }
-    .bigtext{
-        width: 100%;
-    }
-    /* .product{
-        align-content: center;
-    } */
-    .product-grid{
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-}
-@media screen and (min-width: 600px){
-    .content p{
-        width: 50%;
-       
     }
 }
