--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,24 +1,89 @@
 <app-navbar></app-navbar>
-<div class="">
+<div class="container mt-5 mb-3">
+    <div class="row">
+        <div class="col-lg-10 col-12 mt-5 joltImg">
+            <img src="../../assets/blogg.png" alt="">
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem; margin-top: 1rem;" data-aos="fade-up" data-aos-easing="ease-in-out">Sep 26, 2022 | Newest, sofa and chair,wooden | By Mhideeee |  <i class="bi bi-heart" style="margin-left: 1rem;"></i> 5 |  <i class="bi bi-chat-left-dots" style="margin-left: 1rem;"></i> 3</p>
 
-    <div class="">
-        <div class="banner" >
-            <div class="content" >
-                <h1 class="mb-3" >Simmer Winter Collection <br> At your door</h1>
-                <div class="" >
-                    <p style=" font-size: 14px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto labore quaerat minima eius sit, nihil rem esse cupiditate. Asperiores, veniam!</p>
+            <div class="">
+                <h4 class="menutext" style="font-size: 1.5rem;">New Modern Sofa is here</h4>  
+                <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" data-aos="fade-up" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dolore porro harum, ea praesentium laboriosam recusandae molestias eos! Magnam rem aut hic dolore exercitationem quibusdam quo culpa vero dicta? Voluptatum.agnam rem aut hic dolore exercitationem quibusdam quo culpa vero dicta? Voluptatum.agnam rem aut hic dolore exercitationem quibusdam quo culpa vero dicta? Voluptatum.</p>
+                <p style="font-weight: bold; color: #434141; font-size: 14px;line-height: 1.5rem;margin-top: 2rem;" data-aos="fade-up" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dolore porro harum, ea praesentium laboriosam recusandae molestias eos! Magnam rem aut hic dolore exercitationem quibusdam quo culpa vero dicta? Voluptatum.agnam rem aut hic dolore exercitationem quibusdam quo culpa vero dicta? Voluptatum.agnam rem aut hic dolore exercitationem quibusdam quo culpa vero dicta? Voluptatum.</p>
+                <div class="jnr">
+                    <img src="../../assets/b1.png" alt="" >
+                    <img  src="../../assets/b2.png" alt="" >
                 </div>
-                 <div class="explore-btn">
-                    <a href="#" class="exp" routerLink="/collections">Explore More</a>
+
+                <hr style="margin: 1.5rem; font-weight: bold; font-size: 1rem;">
+
+                <div class="mt-5">
+                    <h4 class="menutext" style="font-size: 1rem;">Post a comment</h4>
+                    <form>
+                        <div class="" >
+                            <textarea style="height: 250px;" class="form-control" placeholder="Leave us a message" id="floatingTextarea"></textarea>
+                            
+                          </div>
+                        <div class="arc-central" data-aos="fade-up" data-aos-easing="ease-in-out">
+                            <div class="mb-3" style="margin-top: 2rem;">
+                                <input type="text" class="form-control" placeholder="First Name" aria-label="Username" aria-describedby="basic-addon1">
+                              </div>
+                              <div class="mb-3">
+                                <input type="text" class="form-control" style="margin-top: 2rem;" placeholder="Last Name" aria-label="Username" aria-describedby="basic-addon1">
+                              </div>
+                        </div>
+                        <div class="mb-3" data-aos="fade-up" data-aos-easing="ease-in-out">
+                          <input type="email" class="form-control" style="margin-top: 2rem;" placeholder="email" aria-label="email" aria-describedby="basic-addon1">
+                          
+                        </div>
+                        <div class="mb-3" data-aos="fade-up" data-aos-easing="ease-in-out">
+                          <input type="number" class="form-control" style="margin-top: 2rem;" placeholder="+234-" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+
+                        <div class="" style="margin-top: 2rem; display: flex; align-items: center; gap: 1rem;">
+                            <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input"  >
+                            <p style="color: gray; font-size: 12px;line-height: 1.5rem;margin-top: 1rem;" data-aos="fade-up" data-aos-easing="ease-in-out">SAVE MY NAME , EMAIL, AND WEBSITE IN THIS browser for the next time comment </p>
+                          </div>
+    
+                        
+                      </form>
+                      <div class="explore-btn" style="margin-top: 1rem;">
+                        <a href="#" class="exp" >Submit</a>
+                    </div>
                 </div>
-            </div>
-            <div class="content-bottom" >
-                <p style="text-align: center; font-size: 14px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto labore quaerat minima eius sit, nihil rem esse cupiditate. Asperiores, veniam!</p>
             </div>
         </div>
-        
-        
+        <div class="col-lg-2 col-12 mt-5">
+            <div class="mb-3" data-aos="fade-up" data-aos-easing="ease-in-out">
+                <input type="email" class="form-control" placeholder="search" aria-label="email" aria-describedby="basic-addon1">
+                
+            </div >
+            <div class="" >
+                <img src="../../assets/b2.png" alt="" style="object-fit: cover; width: 100%;" >
+            </div>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" data-aos="fade-up" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dolore porro harum,  rem aut hic dolore</p>
+            <div class="">
+                <h4 class="menutext" style="font-size: 1rem;">Category</h4>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Ceiling (25)</p>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Floor (25)</p>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Led (25)</p>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Modern (25)</p>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Retro (25)</p>
+            <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Wood (25)</p>
+            </div>
+
+            <div class="">
+                <h4 class="menutext" style="font-size: 1rem;">Recent Post</h4>
+                <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, et.</p>
+                <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, et.</p>
+                <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, et.</p>
+                <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, et.</p>
+            </div>
+
+            <div class="">
+                <h4 class="menutext" style="font-size: 1rem;">Tags</h4>
+                <p style="color: gray; font-size: 14px;line-height: 1.5rem;margin-top: 1rem;" >sofa,  room</p>
+            </div>
+            
+        </div>
     </div>
-
-
 </div>
